# faraday

./: .env.example  .gitignore  .pre-commit-config.yaml  ADMIN_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  LICENSE  MILESTONE_v0.2.0.md  README.md  check_architecture.py  pyproject.toml  run_llm_tests.py  run_vector_tests.py  test_container_integration.py  test_llm_standalone.py  test_ranking_functionality.py  test_timeline_integration.py  test_vector_services_only.py  verify_authentication_implementation.py  verify_search_implementation.py  verify_search_task_implementation.py  verify_vector_implementation.py
.kiro/steering/: clean-architecture-principles.md  code-quality-standards.md  development-hooks.md  version-control-standards.md
dev-tools/: README.md
dev-tools/summaries/: ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  README.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TIMELINE_IMPLEMENTATION_SUMMARY.md  VECTOR_IMPLEMENTATION_SUMMARY.md
dev-tools/tests/: README.md  run_search_service_tests.py  test_basic_integration.py  test_container_integration.py  test_full_integration.py  test_llm_standalone.py  test_search_ranking.py  test_vector_services_only.py
dev-tools/verification/: README.md  verify_admin_implementation.py  verify_api_documentation_implementation.py  verify_api_implementation.py  verify_error_handling_implementation.py  verify_search_api_implementation.py  verify_timeline_implementation.py  verify_vector_implementation.py
docs/: llm_configuration_guide.md
faraday-cli/: .gitignore  MILESTONE_v0.1.0.md  README.md  TASK_4_VERIFICATION.md  TASK_5_VERIFICATION.md  demo_smart_interactive.py  pyproject.toml  test_cache_integration.py  test_cli_integration.py  test_interactive_integration.py  test_search_demo.py  test_sync_command.py
faraday-cli/C:\Users\Test\AppData\Roaming/faraday/: config.toml
faraday-cli/completions/: bash_completion.sh  fish_completion.fish  zsh_completion.zsh
faraday-cli/docs/: CLI_USAGE.md  CONFIGURATION.md  GETTING_STARTED.md  README.md  faraday.1
faraday-cli/docs/development/: README.md  TASK_14_VERIFICATION.md  TASK_6_VERIFICATION.md  TASK_7_VERIFICATION.md  TASK_8_VERIFICATION.md  TESTING.md  verify_help_implementation.py
faraday-cli/examples/: README.md  demo_interactive.py
faraday-cli/scripts/: install_completions.sh
faraday-cli/src/faraday_cli/: __init__.py  api.py  auth.py  cache.py  cached_api.py  config.py  interactive.py  main.py  output.py
faraday-cli/src/faraday_cli/commands/: __init__.py  auth.py  config.py  help.py  search.py  sync.py  thoughts.py
faraday-cli/tests/: __init__.py  test_api.py  test_auth.py  test_config.py  test_main.py  test_output.py  test_search.py
faraday-cli/tests/integration/: README.md  test_cli_with_cache.py  test_help_system.py  test_interactive_mode.py  test_search_integration.py  test_smart_interactive.py  test_thought_commands_demo.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: init_db.py  pre_commit_check.py  validate_architecture.py  version_manager.py
src/: __init__.py  container.py  main.py
tests/: __init__.py  conftest.py
(+143 files in other folders)
