[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "faraday-cli"
version = "0.1.0"
description = "Command-line interface for the Faraday Personal Semantic Engine"
authors = ["Faraday Team <team@faraday.dev>"]
readme = "README.md"
packages = [{include = "faraday_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.7.0"
httpx = "^0.26.0"
pydantic = "^2.5.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"
black = "^23.12.0"
mypy = "^1.8.0"
isort = "^5.13.0"

[tool.poetry.scripts]
faraday = "faraday_cli.main:cli"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]